fixed nav width on small screens

--- a/styles/cards.css
+++ b/styles/cards.css
@@ -8,6 +8,11 @@
 }
 
 @media (min-width: 768px) {
+
+    #main {
+        max-width: 768px;
+    }
+
     .card-frame h3 {
         display: block;
     }
